# multiconst

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
multiconst_proc_macros/: Cargo.toml
multiconst_proc_macros/src/: derive_macro.rs  error.rs  for_field_macros.rs  for_multiconst_macro.rs  lib.rs  parsing.rs  pattern.rs  pattern_processing.rs  syntax.rs  test_utils.rs  type_.rs  utils.rs
multiconst_proc_macros/src/derive_macro/: attribute_parsing.rs  testing.rs
multiconst_proc_macros/src/for_multiconst_macro/: tests.rs
multiconst_proc_macros/src/syntax/: testing.rs
src/: derive_macro_reexport.rs  field_querying.rs  lib.rs  macros.rs  utils_for_macros.rs
src/field_querying/: field_name.rs  field_type.rs  field_type_prim_impls.rs  field_type_struct_impls.rs
src/macros/: associated_multiconst_macro.rs  field_macros.rs  multiconst_macro.rs
tests/: rename_crate_tests.rs  tests.rs
tests/tests_mod/: assoc_multiconst_tests.rs  derive_tests.rs  field_macro_tests.rs  misc_tests.rs  slice_destructuring.rs  struct_destructuring.rs  tuple_destructuring.rs  ui_tests.rs
tests/tests_mod/ui/: associated_multiconst_err.rs  associated_multiconst_err.stderr  field_macro_err.rs  field_macro_err.stderr  incomplete_syntax_err.rs  incomplete_syntax_err.stderr  macro_time_type_errors_err.rs  macro_time_type_errors_err.stderr  post_expansion_type_errors_2_err.rs  post_expansion_type_errors_2_err.stderr  post_expansion_type_errors_err.rs  post_expansion_type_errors_err.stderr  semantic_errors_in_macro_err.rs  semantic_errors_in_macro_err.stderr  struct_pattern_errors_err.rs  struct_pattern_errors_err.stderr  struct_pattern_type_errors_err.rs  struct_pattern_type_errors_err.stderr
tests/tests_mod/ui_derive/: derive_macro_err.rs  derive_macro_err.stderr
