[package]
name = "multiconst"
version = "0.2.2"
edition = "2018"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.51.0"
license = "Zlib"
resolver = "2"
description = "destructures an expression into multiple constants"
documentation = "https://docs.rs/multiconst/"
readme="./README.md"
keywords = ["no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/multiconst/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "README.md",
    "LICENSE-ZLIB.md", 
]

[features]
__dbg = ["multiconst_proc_macros/__dbg"]
__no_ui_tests = []
derive = ["multiconst_proc_macros/derive"]
docsrs = []

[workspace]

[dependencies]
multiconst_proc_macros = {path = "./multiconst_proc_macros", version = "=0.2.2"}

[dev-dependencies]
trybuild = "1.0"
static_assertions = "1.1"

[package.metadata.docs.rs]
features = ["derive", "docsrs"]