[package]
name = "multiconst_proc_macros"
version = "0.2.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license="Zlib"
resolver = "2"
description = "implementation detail of multiconst"
keywords = []
categories = []
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "LICENSE-ZLIB",
]

[features]
__dbg = []
derive = ["proc-macro2", "syn", "quote"]

[dependencies.proc-macro2]
version = "1.0.37"
optional = true

[dependencies.syn]
version = "1.0.92"
optional = true

[dependencies.quote]
version = "1.0.18"
optional = true

[dev-dependencies]
proc-macro2 = "1.0.37"

[lib]
proc-macro = true
